# extract-metadata

./: Cargo.toml  README.md
src/: main.rs
