[package]
name = "extract-metadata"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
xio = { path = "../xio", version = "0.1.2" }
dset = { path = "../dset", version = "0.1.0" }
anyhow = { version = "1.0.95", features = ["backtrace"] }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
env_logger = "0.11.6"
glob = "0.3.2"

[dev-dependencies]
tempfile = "3.10.1"
