[package]
name = "extract-metadata"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A tool to extract metadata from .safetensors files in a target directory and its subdirectories."
documentation = "https://docs.rs/extract-metadata"
repository = "https://github.com/rakki194/extract-metadata"

[dependencies]
xio = { path = "../xio", version = "0.1.3" }
dset = { path = "../dset", version = "0.1.3" }
anyhow = { version = "1.0.95", features = ["backtrace"] }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
env_logger = "0.11.6"
glob = "0.3.2"

[dev-dependencies]
tempfile = "3.17.1"
